demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_data-table.scss
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//  (c) 2010-present DEMOS plan GmbH.
//
//  This file is part of the package demosplan,
//  for more information see the license file.
//
//  All rights reserved
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

//  Component: c-data-table
//
//  Used to present tabular data in a readable but appealing way (DpDataTable component).
//
//  @improve
//      - bootstrap component tokens that are shared between .c-table and .c-data-table
//      - clean up declarations and ordering within this file


.c-data-table {
    $data-table-padding-cell: $inuit-base-spacing-unit--tiny;

    // Styling needed for resizable datatable
    .resizing {
        user-select: none;
    }

    // The default color for these repetitive controls is dimmed to not clutter the interface.
    // When a row is hovered, the interactive color scheme is applied.
    // This pattern should also be applied to the actionFlyout trigger and resizeHandle.
    &__wrap-trigger {
        color: $dp-color-interactive-muted;

        .row:hover & {
            color: $dp-color-interactive-default;
        }

        &:hover {
            color: $dp-color-interactive-hover;
        }
    }

    &__resize-handle {
        visibility: hidden;
        width: 30px;
        display: inline-block;
        position: absolute;
        top: $data-table-padding-cell;
        right: 0;
        cursor: move; // Fallback if grab cursor is not supported
        cursor: grab;
        text-align: center;

        i,
        span {
            color: $dp-color-interactive-default;
            display: inline;
            font-size: 1em;
        }

        &.is-active {
            display: inline !important;
            visibility: visible;
        }
    }

    &.is-fixed {
        th.c-data-table__resizable {
            padding-right: 2em;
        }

        .c-data-table__resizable {
            position: relative;
            overflow: hidden;

            &--truncated {
                @extend %break-words-with-hyphens;

                // This works in all major browsers despite having the -webkit-prefix.
                // It hasn't made it into the CSS specification yet.
                // More: https://css-tricks.com/almanac/properties/l/line-clamp/
                // This solution is only supported with -webkit prefix, so it is explicitly set here.
                /* stylelint-disable value-no-vendor-prefix */
                display: -webkit-box;
                -webkit-line-clamp: 1;
                -webkit-box-orient: vertical;
                overflow: hidden;

                position: relative;

                .show-more {
                    position: absolute;
                }
            }

            &--wrapped {
                white-space: normal;
            }

            &:hover {
                border-right-width: 2px !important;
                border-right-color: $dp-color-interactive-default !important;

                .c-data-table__resize-handle {
                    visibility: visible;
                }
            }
        }

        td.is-col-hovered {
            border-right-width: 2px !important;
            border-right-color: $dp-color-interactive-default !important;
        }
    }


    &__drag-handle {
        visibility: hidden;
    }

    table {
        margin-bottom: $inuit-base-spacing-unit;
    }

    td,
    th {
        text-align: left;
        padding: $data-table-padding-cell;
        vertical-align: top;
    }

    th .c-data-table__drag-handle {
        visibility: visible;
        fill: $dp-color-neutral-light-1;
    }


    tr:not(.is-expanded-content) td {
        border-top: 1px solid $dp-color-neutral-light-2;
    }

    // Use a lighter border when full borders (including vertical) are enabled.
    &:has(.border-r) tr:not(.is-expanded-content) td {
        border-top-color: $dp-color-neutral-light-3;
    }

    tbody {
        tr:hover,
        tr:hover + tr.is-expanded-content,
        tr.is-hovered-content {
            background-color: $dp-color-neutral-light-4;
        }

        tr:hover .c-data-table__drag-handle {
            visibility: visible;
            fill: $dp-button-bg-color;
            cursor: grab;

            &:active {
                cursor: grabbing;
            }
        }
    }

    &__cell--narrow {
        width: 1%;
        white-space: nowrap;
    }

    &__sticky-header {
        position: sticky;
        top: 0;

        /* Ensure sticky header renders above regular cells but below flyout/expand columns */
        z-index: $dp-z-above-zero + 1;
        background-color: $dp-color-white;
    }

    /*
     * Keep flyout and expand columns always visible at the right edge.
     * Explicit BEM classes are set in DpTableRow/DpTableHeader in demosplan-ui so that
     * regular data columns in resizable-only tables (e.g. InstitutionList) are never affected.
     */

    // Allow mouse events to pass through the flyout header cell so the last column's resize handle remains accessible
    th.c-data-table__col--flyout {
        pointer-events: none;
    }

    td.c-data-table__col--flyout,
    th.c-data-table__col--flyout {
        position: sticky;
        right: 0;
        z-index: $dp-z-above-zero;
        background-color: $dp-color-white;
        text-align: center;

        // Cover the 1px gap on the right edge without affecting table layout
        &::after {
            content: '';
            position: absolute;
            top: 0;
            right: -1px;
            width: 2px;
            height: 100%;
            background-color: $dp-color-white;
        }
    }

    // When expand follows flyout, offset flyout left by the expand column's width
    td.c-data-table__col--flyout:has(+ td.c-data-table__col--expand),
    th.c-data-table__col--flyout:has(+ th.c-data-table__col--expand) {
        right: 30px;
    }

    td.c-data-table__col--expand,
    th.c-data-table__col--expand {
        position: sticky;
        right: 0;
        z-index: $dp-z-above-zero;
        background-color: $dp-color-white;
        text-align: center;

        &::after {
            content: '';
            position: absolute;
            top: 0;
            right: -1px;
            width: 2px;
            height: 100%;
            background-color: $dp-color-white;
        }
    }

    /*
     * When a flyout is open, create a low stacking context on subsequent rows so
     * the dropdown (z-index: 2100) inside the current row's sticky cell (z-index: 10)
     * paints above the following rows.
     */
    tbody tr:has(.is-expanded) ~ tr {
        position: relative;
        z-index: 0;
    }

    tbody tr:hover td.c-data-table__col--flyout,
    tbody tr:hover td.c-data-table__col--expand,
    tbody tr.is-hovered-content td.c-data-table__col--flyout,
    tbody tr.is-hovered-content td.c-data-table__col--expand {
        background-color: $dp-color-neutral-light-4;

        &::after {
            background-color: $dp-color-neutral-light-4;
        }
    }
}

/*
 * Shadow on the left side of the sticky column, only when the table content is scrollable.
 * A ::before pseudo-element with a gradient is used instead of box-shadow because outset
 * shadows are clipped by the overflow-x: auto container.
 * The shadow always goes on the LEFTMOST sticky column:
 * flyout when present (it always precedes expand), otherwise expand alone.
 */
.has-scrollable-content .c-data-table {
    // Flyout is always leftmost when present
    td.c-data-table__col--flyout,
    th.c-data-table__col--flyout {
        &::before {
            content: '';
            position: absolute;
            top: 0;
            left: -12px;
            width: 12px;
            height: 100%;
            background: linear-gradient(to right, transparent 0%, rgb(0 0 0 / 1%) 30%, rgb(0 0 0 / 5%) 55%, rgb(0 0 0 / 13%) 80%, rgb(0 0 0 / 24%) 100%);
        }
    }

    // Expand only gets shadow when no flyout column precedes it
    td.c-data-table__col--expand:not(td.c-data-table__col--flyout ~ *),
    th.c-data-table__col--expand:not(th.c-data-table__col--flyout ~ *) {
        &::before {
            content: '';
            position: absolute;
            top: 0;
            left: -12px;
            width: 12px;
            height: 100%;
            background: linear-gradient(to right, transparent 0%, rgb(0 0 0 / 1%) 30%, rgb(0 0 0 / 5%) 55%, rgb(0 0 0 / 13%) 80%, rgb(0 0 0 / 24%) 100%);
        }
    }
}

